--- a/notebooks/Tune-A-Video.ipynb
+++ b/notebooks/Tune-A-Video.ipynb
@@ -121,7 +121,7 @@
         "\n",
         "#@markdown Enter the directory name to save model at.\n",
         "\n",
-        "OUTPUT_DIR = \"outputs/man-skiing\" #@param {type:\"string\"}\n",
+        "OUTPUT_DIR = \"outputs/x1\" #@param {type:\"string\"}\n",
         "if save_to_gdrive:\n",
         "    OUTPUT_DIR = \"/content/drive/MyDrive/\" + OUTPUT_DIR\n",
         "\n",
@@ -167,9 +167,9 @@
         "\n",
         "from omegaconf import OmegaConf\n",
         "\n",
-        "CONFIG_NAME = \"configs/man-skiing.yaml\" #@param {type:\"string\"}\n",
+        "CONFIG_NAME = \"configs/x1.yaml\" #@param {type:\"string\"}\n",
         "\n",
-        "train_video_path = \"data/man-skiing.mp4\" #@param {type:\"string\"}\n",
+        "train_video_path = \"data/x1.mp4\" #@param {type:\"string\"}\n",
         "train_prompt = \"a man is skiing\" #@param {type:\"string\"}\n",
         "video_length = 8 #@param {type:\"number\"}\n",
         "width = 512 #@param {type:\"number\"}\n",
